implemented search-input and used it.

--- a/src/members/members.html
+++ b/src/members/members.html
@@ -12,7 +12,7 @@
                 <div class="col-md-8 col-md-offset-4">
                     <form class="form-inline" style="padding-top:16px;direction:rtl;">
                         <div class="input-group" style="padding-top:16px;width:50%;font-size:18px;">
-                            <search-input value.bind="filter" placeholder="members.filter"></search-input>
+                            <search-input value.bind="filter" placeholder="members.filter" height="38"></search-input>
                         </div>
                         <div class="input-group" style="padding-top:16px;">
                             <select value.bind="order"
