--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -3,9 +3,9 @@
     <div class="search-input input-group" dir="rtl">
         <div class="spyglass-div">
             <!--i class="fa fa-search search"></i-->
-            <help topic="search-input" class="search" icon="search" position="bottom" style="position:absolute;bottom:2px;right:4px;"></help>
+            <help topic="search-input" class="search" icon="search" position="bottom" css="position:absolute;top:${(height-30)/2}px;right:4px;"></help>
         </div>
-        <input type="search" value.bind="value" t="[placeholder]${placeholder}">
-        <i class="fa fa-remove remove" if.bind="value" click.trigger="clear_text()"></i>
+        <input type="search" value.bind="value" t="[placeholder]${placeholder}" css="height:${height}px;">
+        <i class="fa fa-remove remove" if.bind="value" click.trigger="clear_text()" css="top:${(height-14)/2}px;"></i>
     </div>
 </template>
