--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -13,9 +13,11 @@
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:32px;">
                         <form class="form-inline">
-                            <div class="form-group">
-                                <input dir="rtl" type="search" class="form-control" t="[placeholder]stories.filter" style="font-size:18px;height:38px;width:300px;"
-                                    value.bind="filter & debounce" change.delegate="update_story_list()" />
+                            <div class="input-group" style="width:400px;">
+                                <search-input value.bind="filter" 
+                                    placeholder="stories.filter" height="38"
+                                    change.delegate="update_story_list()">
+                                </search-input>
                             </div>
                             <div class="form-group" if.bind="phase=='can-modify-tags'">
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
