--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -3,11 +3,28 @@
         <i class="fa fa-play"></i>
         ${'user.login' | t}
     </a>
-
     <a href if.bind="user.isLoggedIn" click.trigger="logout()" class="border-right" style="text-decoration:none;color:black">
         <i class="fa fa-play fa-rotate-180"></i>
         ${'user.logout' | t}
     </a>
+    <help topic="introduction" position="bottom"
+        style="margin:0;padding:0;border-right:1px solid gray;">
+    </help>
+    <div class="btn-group dropdown border-right" style="padding:0" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+        <button class="btn btn-link btn-md dropdown-toggle" style="text-decoration:none;" aubs-dropdown-toggle>
+            <span class="font-size-150">${'a' | t}</span>
+            <i class="font-size-100">${'a' | t}</i>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-left">
+            <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' | t}</a></li>
+            <li class="font-size-110"><a class="dropdown-item" href="#" click.trigger="set_font_size(110)">${'abcde' | t}</a></li>
+            <li class="font-size-120"><a class="dropdown-item" href="#" click.trigger="set_font_size(120)">${'abcde' | t}</a></li>
+            <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' | t}</a></li>
+            <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' | t}</a></li>
+            <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' | t}</a></li>
+        </ul>
+    </div>
 
     <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" t="[title]user.can-edit" class="border-right">
         <i class="fa fa-lg ${user.editing ? 'fa-eye' : 'fa-pencil' }"></i>
@@ -24,8 +41,8 @@
     </a>
 
     <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" 
-        if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER"
-        <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+        if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
+        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
             <i class="fa fa-cog"></i>
             <span class="caret"></span>
         </button>
@@ -37,4 +54,5 @@
             <li if.bind="user.privileges.ACCESS_MANAGER" t="[title]user.manage-users"><a class="dropdown-item" href="#" click.trigger="manage_users()">Manage Users</a></li>
         </ul>
     </div>
+
 </template>
