--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -13,7 +13,7 @@
         <div class="row checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
 
         <div class="fr-view ${settings.class}">
-            <p innerhtml.bind="story.story_text" css="float:right;direction:rtl;text-align:justify;" >
+            <p class="${theme.font_size}" innerhtml.bind="story.story_text" css="float:right;direction:rtl;text-align:justify;" >
             </p>
         </div>
     </div>
