--- a/src/home/home.html
+++ b/src/home/home.html
@@ -36,7 +36,7 @@
                             ${story.name}
                         </h4>
                         <div class="story-prefix">
-                            <p dir="rtl" innerhtml.bind="story.story" style="text-align:right;max-height:50px;font-size:13px;width:100%;overflow:hidden;">
+                            <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story.story" style="text-align:right;max-height:50px;width:100%;overflow:hidden;">
                             </p>
                         </div>
                         <div style="position:absolute;bottom:0px;left:12px;cursor:pointer;">
