align help text

--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -9,7 +9,7 @@
         <h2 class="popover-title" innerhtml.bind="story_info.name" dir="rtl" style="font-weight:bolder;">
         </h2>
 
-        <div class="popover-content" innerhtml.bind="story_text" dir="rtl">
+        <div class="popover-content" style="text-align:justify;" innerhtml.bind="story_text" dir="rtl">
         </div>
     </div>
 </template>
