--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -9,7 +9,7 @@
         <div class="row content-area" style="height:300px;width:100%;margin-bottom:24px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1" css="padding-top: 40px;position:relative">
-                    <span css="position:absolute">${'photos.more' | t}</span>
+                    <span css="position:absolute"></help>${'photos.more' | t}<help topic="photos.slider" position="right"></span>
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
                     <span css="position:absolute">${'photos.less' | t}</span>
                 </div>
