--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -11,7 +11,7 @@
         style="margin:0;padding:0;border-right:1px solid gray;">
     </help>
     <div class="btn-group dropdown border-right" style="padding:0" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
-        <button class="btn btn-link btn-md dropdown-toggle" style="text-decoration:none;" aubs-dropdown-toggle>
+        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;" aubs-dropdown-toggle>
             <span class="font-size-150">${'a' | t}</span>
             <i class="font-size-100">${'a' | t}</i>
             <span class="caret"></span>
