--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -52,7 +52,7 @@
                                 </button>
                                 <help topic="done-selecting-photos" position="bottom"></help>
                             </div>
-                            <div if.bind="caller_type" class="input-group" style="padding-top:16px;">
+                            <div if.bind="caller_type" class="form-group">
                                 <button class="btn btn-success" click.trigger="save_photo_group()">
                                     ${'members.back-to-' + caller_type | t}
                                 </button>
@@ -61,9 +61,10 @@
                     </div>
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;margin-bottom:16px;">
                         <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;" 
-                            repeat.for="photo of photo_list | filter : filter : 'title' | take : 9999">
+                            repeat.for="photo of photo_list | filter : filter : '*selected' : 'title' | take : 9999">
                             <a click.trigger="maximize_photo(photo, $event)" class.bind="photo.selected">
-                                <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
+                                <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" 
+                                    height="${photo_size}" style="margin:0;" />
                             </a>
                            <!--a class="photo-maximizer" css="position:absolute;right:0px;top:${width/2}px;" 
                                 click.trigger="maximize_photo(photo, $event)">
