--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -10,11 +10,11 @@
     <help topic="introduction" position="bottom"
         style="margin:0;padding:0;border-right:1px solid gray;">
     </help>
-    <div class="btn-group dropdown border-right" style="padding:0" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
-        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;" aubs-dropdown-toggle>
-            <span class="font-size-150">${'a' | t}</span>
-            <i class="font-size-100">${'a' | t}</i>
-            <span class="caret"></span>
+    <div class="btn-group dropdown border-right" style="padding:0;margin-right:26px;" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;position:relative" aubs-dropdown-toggle>
+            <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' | t}</span>
+            <span style="position:absolute;left:13px;top:0px" class="font-size-100">${'a' | t}</span>
+            <span style="position:absolute;left:36px;top:10px;"class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left">
             <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' | t}</a></li>
@@ -26,7 +26,8 @@
         </ul>
     </div>
 
-    <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" t="[title]user.can-edit" class="border-right">
+    <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" t="[title]user.can-edit" class="border-right"
+        style="border-left:1px solid gray;padding-left:10px;">
         <i class="fa fa-lg ${user.editing ? 'fa-eye' : 'fa-pencil' }"></i>
     </a>
 
