--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -1,24 +1,32 @@
 <template>
     <form class="form-inline" dir="ltr">
-        <div if.bind="show_edit_end_date" class="form-group" style="float:left;margin-right:0px; ">
+        <div show.bind="show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; ">
             <select value.bind="span_size" style="height:2em;">
                 <option repeat.for="option of end_date_options" model.bind="option.value">${option.name}</option>
             </select>
         </div>
-        <div class="form-group" if.bind="show_end_date" style="float:left;margin-right:0px;">
-            <label style="height:2em;">${end_date_str}</label>
+        <div show.bind="!show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; "></div>
+ 
+        <div class="form-group" show.bind="show_end_date">
+            <span style="padding-top:0.6em;">${end_date_str}</span>
         </div>
-        <div class="form-group" if.bind="show_labels" style="float:left;margin-right:0px;">
-            <label style="height:2em;">-</label>
+
+        <div class="form-group" show.bind="show_labels" style="margin-right:0px;width:1em">
+            <span style="margin-left:0.4em;">-</span>
         </div>
-        <div if.bind="user.editing" class="form-group" change.trigger="base_date_changed($event)" style="float:left;margin-right:0px;">
-            <input type="text" value.bind="base_date_str" 
-                maxlength="10" style="height:2em;width:6.2em;padding-left:0.2em;" 
-                keyup.trigger="on_keyup($event)" 
+
+        <div class="form-group" show.bind="! show_labels" style="margin-right:0px;width:1em;">
+            <span></span>
+        </div>
+
+        <div show.bind="user.editing" class="form-group" change.trigger="base_date_changed($event)" style="margin-right:0px;width:5em;">
+            <input type="text" value.bind="base_date_str" maxlength="10" style="height:2em;width:6.2em;padding-left:0.2em;" keyup.trigger="on_keyup($event)"
                 keypress.trigger="keep_only_good_chars($event)" />
         </div>
-        <div class="form-group" if.bind="show_date" style="float:left;margin-right:0px;">
-            <label style="height:2em;" >${base_date_str}</label>
+
+        <div class="form-group" show.bind="show_date" style="width:5em;">
+            <span style="padding-top:0.6em;">${base_date_str}</span>
         </div>
+        
     </form>
 </template>
