--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -2,8 +2,18 @@
     <require from='./photo-strip.css'></require>
     <div class="row slides-list" css="height: ${height}px;width: ${width};margin-left:auto;margin-right:auto;z-index:0;">
         <help style="position:absolute;bottom:0px;" topic.bind="photo-strip" position="right"></help>
-        <div if.bind="settings.arrows" class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
-        <div if.bind="settings.arrows"class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
+        <div if.bind="settings.arrows" class="slide-control next" click.trigger="next_slide($event)">
+            <div style="position:relative">
+                <i class="fa fa-chevron-right fa-3x"></i>
+                <i class="fa fa-chevron-right fa-2x" style="color:black;top:6px;left:0px;position:absolute;"></i>
+            </div>
+        </div>
+        <div if.bind="settings.arrows"class="slide-control prev" click.trigger="prev_slide($event)">
+            <div style="position:relative">
+                <i class="fa fa-chevron-left fa-3x"></i>
+                <i class="fa fa-chevron-left fa-2x" style="color:black;top:6px;left:10px;position:absolute;"></i>
+            </div>
+        </div>
 
         <a repeat.for="slide of slides" interact-draggable interact-dragend.delegate="shift_photos($event)" style="float:right;z-index:100;" >
             <img id="img-${slide.photo_id}" click.trigger="on_click(slide, $event)" src="${slide.src}" height="${height}" style="width:initial;" aubs-tooltip="text.bind:slide.title" />
