--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -3,11 +3,11 @@
     <div style="margin-top:50px" class="content-area">
         <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:0px;margin-right:0px;margin-left:0px;font-size:150%;padding-top:18px;"
             <h3 dir="rtl" style="float: right;margin:0px;">
-                <i class="fa fa-rotate-left" style="float:left;cursor:pointer;" t="[title]go-back" click.trigger="go_back()"></i>
-                <h3 style="padding:0;margin:0;" if.bind="member.member_info.id">${member.member_info.full_name }</h3>
+                <i class="fa fa-rotate-left" style="float:left;cursor:pointer;margin-top:6px;" t="[title]go-back" click.trigger="go_back()"></i>
+                <span style="padding:0;margin:0;" if.bind="member.member_info.id">${member.member_info.full_name }</span>
                 <span if.bind="! member.member_info.id">${'members.new-member' | t }</span>
+                <copy-to-clipboard if.bind="user.editing" content.bind="member_url" style="float:left;"></copy-to-clipboard>
             </h3>
-            <copy-to-clipboard if.bind="user.editing" content.bind="member_url" style="float:left;"></copy-to-clipboard>
         </div>
         <photo-strip source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
             settings.bind="{arrows:true, height:220}"></photo-strip>
@@ -123,6 +123,7 @@
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_4.name"></span>
+                        <a click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     </h4>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_text ">
@@ -134,6 +135,7 @@
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_3.name"></span>
+                        <a click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     </h4>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_text ">
@@ -145,6 +147,7 @@
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_2.name"></span>
+                        <a click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     </h4>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_text ">
@@ -156,6 +159,7 @@
                         <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
                         <span innerhtml.bind="story_1.name"></span>
+                        <a click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
                     </h4>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_text">
