--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -55,9 +55,13 @@
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div class="big-story-panel ${theme.font_size}">
-                            <p class="${story.language=='he' ? 'rtl' : 'ltr'} ${highlight_on}" if.bind="! user.editing" innerhtml.bind="highlighted_html">
+                            <p class="${story.language=='he' ? 'rtl' : 'ltr'} ${highlight_on}" if.bind="! user.editing" 
+                                innerhtml.bind="highlightedHtml">
                             </p>
-                            <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="story"></editable>
+                            <editable if.bind="user.editing" 
+                                settings.bind="{show_date:false, class:'story-section', checkable: false}" 
+                                story.bind="story">
+                            </editable>
                         </div>
                     </div>
                 </div>
