--- a/src/members/members.html
+++ b/src/members/members.html
@@ -10,14 +10,13 @@
         </div>
         <div>
             <div class="row">
-                <div class="col-md-8 col-md-offset-4">
+                <div class="col-md-10 col-md-offset-2">
                     <form class="form-inline" style="padding-top:16px;direction:rtl;">
                         <div class="input-group" style="padding-top:16px;width:50%;font-size:18px;">
                             <search-input value.bind="filter" placeholder="members.filter" height="38"></search-input>
                         </div>
                         <div class="input-group" style="padding-top:16px;">
-                            <select value.bind="order"
-                                style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.trigger="order_changed($event)">
+                            <select value.bind="order" style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.trigger="order_changed($event)">
                                 <option dir="rtl" repeat.for="option of sorting_options" model.bind="option.value">${option.name}</option>
                             </select>
                         </div>
@@ -30,20 +29,23 @@
                                 ${'members.new' & t}
                             </a>
                         </div>
-                        <div if.bind="caller_type" class="input-group" style="padding-top:16px;">
+                        <div if.bind="caller_type" class="input-group" style="padding-top:16px;" class="input-gorup">
                             <button class="btn btn-success" click.trigger="save_member_group()">
                                 ${'members.back-to-' + caller_type | t}
                             </button>
                         </div>
-                        <div class="btn-group dropdown rtl" aubs-dropdown="auto-close.bind: autoClose;" 
-                            style="border:solid 1px lightgray;border-top:solid 2px gray;border-left:solid 2px gray;height:38px;margin-top:16px;padding:6px;padding-top:8px;"
-                            if.bind="selected_members.size > 0"
-                            <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
-                                <span >${'members.member-groups' | t}</span>
-                                <span class="caret"></span>
+                        <div if.bind="selected_members.size == 1 && !caller_type" class="input-group" style="padding-top:16px;" >
+                            <button class="btn btn-succes" click.trigger="toggle_relatives_mode()">
+                                ${ (relatives_mode ? 'members.all-members' : 'members.family-only') | t}
+                            </button>
+                        </div>
+                        <div class="btn-group dropdown rtl" aubs-dropdown="auto-close.bind: autoClose;" style="border:solid 1px lightgray;border-top:solid 2px gray;border-left:solid 2px gray;height:38px;margin-top:16px;padding:6px;padding-top:8px;"
+                            if.bind="selected_members.size > 0" <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+                            <span>${'members.member-groups' | t}</span>
+                            <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-left">
-                                <li if.bind="caller_id" >
+                                <li if.bind="caller_id">
                                     <a class="dropdown-item" href="#" click.trigger="save_member_group()">
                                         <span style="float:right">${'members.save-member-group' | t}</span>
                                     </a>
@@ -64,8 +66,7 @@
                     <li repeat.for="member of members | filter : filter : '*selected' : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : 3200 | filtervisibility : 0 "
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''} ${member.selected}"
                         dir="rtl">
-                        <a click.trigger = "member_clicked(member, $event)"
-                            disabled.bind="not_ready(member)" style="color:black;">
+                        <a click.trigger="member_clicked(member, $event)" disabled.bind="not_ready(member)" style="color:black;">
                             <img src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.title" 
                                 css="border: ${member.selected ? '6px solid lightgreen' : 'none'}" />
                             <h6 dir="rtl" class="list-group-item-heading" >${member.name}</h6>
