--- a/src/members/members.html
+++ b/src/members/members.html
@@ -15,12 +15,12 @@
                         <div class="input-group" style="padding-top:16px;width:50%;font-size:18px;">
                             <search-input value.bind="filter" placeholder="members.filter" height="38"></search-input>
                         </div>
-                        <div class="input-group" style="padding-top:16px;">
+                        <div class="input-group" style="padding-top:16px;" if.bind="! relatives_mode">
                             <select value.bind="order" style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.trigger="order_changed($event)">
                                 <option dir="rtl" repeat.for="option of sorting_options" model.bind="option.value">${option.name}</option>
                             </select>
                         </div>
-                        <div class="input-group" style="padding-top:16px;">
+                        <div class="input-group" style="padding-top:16px;" if.bind="! relatives_mode">
                             <help topic="members" position="bottom"></help>
                         </div>
                         <div if.bind="user.editing" class="input-group" style="padding-top:16px;">
@@ -39,10 +39,15 @@
                                 ${ (relatives_mode ? 'members.all-members' : 'members.family-only') | t}
                             </button>
                         </div>
-                        <div class="btn-group dropdown rtl" aubs-dropdown="auto-close.bind: autoClose;" style="border:solid 1px lightgray;border-top:solid 2px gray;border-left:solid 2px gray;height:38px;margin-top:16px;padding:6px;padding-top:8px;"
-                            if.bind="selected_members.size > 0" <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
-                            <span>${'members.member-groups' | t}</span>
-                            <span class="caret"></span>
+                        <div class="input-group" style="padding-top:16px;" if.bind="relatives_mode">
+                            <help topic="family-connections" position="bottom"></help>
+                        </div>
+                        <div class="btn-group dropdown rtl" aubs-dropdown="auto-close.bind: autoClose;" 
+                            style="border:solid 1px lightgray;border-top:solid 2px gray;border-left:solid 2px gray;height:38px;margin-top:16px;padding:6px;padding-top:8px;"
+                            if.bind="selected_members.size > 0  && ! relatives_mode"
+                            <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+                                <span>${'members.member-groups' | t}</span>
+                                <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-left">
                                 <li if.bind="caller_id">
