--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -12,7 +12,7 @@
             <button if.bind="keywords && keywords.length > 0 && ! user.editing" 
                 class="highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
             </button>
-            <copy-to-clipboard if.bind="user.editing" content.bind="story_url" style="float:left;"></copy-to-clipboard>
+            <copy-to-clipboard if.bind="user.editing" content.bind="story_url" prefix.bind="host" style="float:left;"></copy-to-clipboard>
         </div>
         <div class="row" style="direction:rtl;">
             <div class="col-md-5" style="padding-left:40px;">
